--- a/feretui/resources/templates/resource.tmpl
+++ b/feretui/resources/templates/resource.tmpl
@@ -1,2 +1,210 @@
 <templates>
+  <template id="view-create-button">
+    <button
+      class="button is-primary"
+      hx-get="{{ feretui.base_url }}/action/goto?{{ create_view_qs }}"
+    >
+      <span class="icon">
+        <i class="fa-solid fa-plus"></i>
+      </span>
+      <span>Create</span>
+    </button>
+  </template>
+  <template id="view-delete-button">
+    <button
+      class="button is-danger selected-buttons-resource-{{ rcode }}-view-{{ vcode }}"
+      hx-get="{{ feretui.base_url }}/action/goto?{{ delete_view_qs }}"
+      disabled="{{ disabled }}"
+    >
+      <span class="icon">
+        <i class="fa-solid fa-trash"></i>
+      </span>
+      <span>Delete</span>
+    </button>
+  </template>
+  <template id="feretui-page-resource-pagination">
+    <div class="columns is-vcentered">
+      <div class="column is-narrow">
+        <div class="buttons">
+          {% for button in header_buttons %}
+          {{ button }}
+          {% endfor %}
+        </div>
+      </div>
+      <div class="column">
+        {% if paginations %}
+        <nav class="pagination" role="pagination" arial-label="pagination">
+          {% if paginations[0] == offset %}
+          <a class="pagination-previous" disabled><i class="fa-solid fa-chevron-left"></i></a>
+          {% endif %}
+          {% if paginations[0] != offset %}
+          <a
+            class="pagination-previous"
+            hx-get="{{ feretui.base_url}}/action/resource?action=pagination&offset={{offset - limit}}"
+          >
+            <i class="fa-solid fa-chevron-left"></i>
+          </a>
+          {% endif %}
+          {% if paginations[-1] == offset %}
+          <a class="pagination-next" disabled><i class="fa-solid fa-chevron-right"></i></a>
+          {% endif %}
+          {% if paginations[-1] != offset %}
+          <a
+            class="pagination-next"
+            hx-get="{{ feretui.base_url}}/action/resource?action=pagination&offset={{offset + limit}}"
+          >
+            <i class="fa-solid fa-chevron-right"></i>
+          </a>
+          {% endif %}
+          <ul class="pagination-list">
+            {% for pagination in paginations %}
+            <li>
+              {% if pagination == offset %}
+              <a class="pagination-link is-current">
+                {{ pagination }}-{{ [pagination + limit - 1, dataset.total]|min }}
+              </a>
+              {% endif %}
+              {% if pagination != offset %}
+              <a
+                class="pagination-link"
+                hx-get="{{ feretui.base_url}}/action/resource?action=pagination&offset={{ pagination }}"
+              >
+                {{ pagination }}-{{ [pagination + limit - 1, dataset.total]|min }}
+              </a>
+              {% endif %}
+            </li>
+            {% endfor %}
+          </ul>
+        </nav>
+        {% endif %}
+      </div>
+    </div>
+  </template>
+  <template id="feretui-resource-list">
+    <div id="resource-{{ rcode }}-view-{{ vcode }}" class="container is-fluid">
+      <form>
+        <div class="columns">
+          <div class="column">
+            <div class="columns is-vcentered">
+              <div class="column is-2 content">
+                <h1>{{ label }} <small>({{ dataset.total }})</small></h1>
+              </div>
+              <div class="column">
+                <!-- filters -->
+              </div>
+            </div>
+            <include template="feretui-page-resource-pagination" />
+            <div class="table-container">
+              <table class="table is-fullwidth is-striped">
+                <thead>
+                  <tr>
+                    <th class="is-narrow">
+                      <input
+                        type="checkbox"
+                        name="selected-table-resource-{{ rcode }}-view-{{ vcode }}"
+                        _="
+                          on click 
+                          set <input[name='selected-rows-resource-{{ rcode }}-view-{{ vcode }}']/>'s checked to my.checked 
+                          if me.checked
+                            set .selected-buttons-resource-{{ rcode }}-view-{{ vcode }} @disabled to undefined
+                          else
+                            set .selected-buttons-resource-{{ rcode }}-view-{{ vcode }} @disabled to 'disabled'
+                          end
+                        "
+                      />
+                    </th>
+                    {% for field in form %}
+                    <th id="{{ field.name }}">{{ field.label.text }}</th>
+                    {% endfor %}
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for row in dataset.forms %}
+                  <tr
+                    hx-trigger="dblclick"
+                    hx-get="/feretui/action/goto?{{ open_view_qs }}&pk={{ row.pk.data }}"
+                  >
+                    <td>
+                      <input 
+                        type="checkbox" 
+                        name="selected-rows-resource-{{ rcode }}-view-{{ vcode }}" 
+                        class="selected-rows-resource-{{ rcode }}-view-{{ vcode }}" 
+                        value="{{ row.pk.data }}"
+                        _="
+                          on click 
+                          if me.checked
+                            if (<input[name='selected-rows-resource-{{ rcode }}-view-{{ vcode }}']/>'s checked) do not contains false
+                              set <input[name='selected-table-resource-{{ rcode }}-view-{{ vcode }}']/>'s checked to me.checked
+                            end
+                            set .selected-buttons-resource-{{ rcode }}-view-{{ vcode }} @disabled to undefined
+                          else
+                            set <input[name='selected-table-resource-{{ rcode }}-view-{{ vcode }}']/>'s checked to me.checked
+                            if (<input[name='selected-rows-resource-{{ rcode }}-view-{{ vcode }}']/>'s checked) do not contains true
+                              set .selected-buttons-resource-{{ rcode }}-view-{{ vcode }} @disabled to 'disabled'
+                            end
+                          end
+                        "
+                      />
+                    </td>
+                    {% for field in form %}
+                    <td>
+                      {{ widget(row[field.name]) }}
+                    </td>
+                    {% endfor %}
+                  </tr>
+                  {% endfor %}
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <th></th>
+                    {% for field in form %}
+                    <th id="{{ field.name }}">{{ field.label.text }}</th>
+                    {% endfor %}
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
+            <include template="feretui-page-resource-pagination" />
+        </div>
+          {% if actions %}
+            <div class="column is-2">
+              {% for action in actions %}
+              {{ action }}
+              {% endfor %}
+            </div>
+          {% endif %}
+        </div>
+      </form>
+    </div>
+  </template>
+  <template id="feretui-page-resource-action">
+    <a
+      class="button panel-block"
+      hx-post="{{ url }}"
+    >
+      {{ label }}
+      <include template="feretui-description"/>
+    </a>
+  </template>
+  <template id="feretui-page-resource-action-for-selected-rows">
+    <a
+      class="button panel-block selected-buttons-resource-{{ rcode }}-view-{{ vcode }}"
+      hx-post="{{ url }}"
+      disabled
+    >
+      {{ label }}
+      <include template="feretui-description"/>
+    </a>
+  </template>
+  <template id="feretui-page-resource-action-set">
+    <div class="panel mb-4">
+      <p class="panel-heading">
+        {{ label }}
+        <include template="feretui-description"/>
+      </p>
+      {% for action in actions %}
+      {{ action }}
+      {% endfor %}
+    </div>
+  </template>
 </templates>
