--- a/feretui/resources/templates/resource.tmpl
+++ b/feretui/resources/templates/resource.tmpl
@@ -2,32 +2,7 @@
   <template id="feretui-resource-list">
     <div id="resource-{{ rcode }}-view-{{ vcode }}" class="container is-fluid">
       <form>
-        <div class="columns is-vcentered">
-          <div class="column content">
-            <h1>{{ label }} <small>({{ dataset.total }})</small></h1>
-          </div>
-          <div class="column is-narrow">
-            <div class="field is-grouped is-grouped-multiline">
-            {% for fname, values in filters %}
-              <div class="control">
-                <div class="tags has-addons">
-                  <span class="tag is-dark">{{ fname }}</span>
-                  {% for value in values %}
-                  <span class="tag is-info">
-                    {{ value }}
-                    <button
-                      class="delete"
-                      hx-delete="/feretui/action/resource?action=filters&{{fname}}={{value}}"
-                    >
-                    </button>
-                  </span>
-                  {% endfor %}
-                </div>
-              </div>
-            {% endfor %}
-            </div>
-          </div>
-        </div>
+        <include template="view-multi-header" />
         <div class="columns">
           <div class="column">
             <include template="view-pagination" />
