--- a/feretui/resources/templates/common.tmpl
+++ b/feretui/resources/templates/common.tmpl
@@ -61,7 +61,7 @@
             <li>
               {% if pagination == offset %}
               <a class="pagination-link is-current">
-                {{ pagination }}-{{ [pagination + limit - 1, dataset.total]|min }}
+                {{ pagination + 1 }}-{{ [pagination + limit, dataset.total]|min }}
               </a>
               {% endif %}
               {% if pagination != offset %}
@@ -69,7 +69,7 @@
                 class="pagination-link"
                 hx-get="{{ feretui.base_url}}/action/resource?action=pagination&offset={{ pagination }}"
               >
-                {{ pagination }}-{{ [pagination + limit - 1, dataset.total]|min }}
+                {{ pagination + 1 }}-{{ [pagination + limit, dataset.total]|min }}
               </a>
               {% endif %}
             </li>
